[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Joueur.gd" type="Script" id=1]
[ext_resource path="res://Ressources/Joueur/Player_Speed.png" type="Texture" id=2]
[ext_resource path="res://Ressources/Sons/Joueur/shoot.wav" type="AudioStream" id=3]
[ext_resource path="res://Ressources/Sons/Joueur/player_death.wav" type="AudioStream" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Joueur" type="KinematicBody2D" groups=[
"Joueur",
]]
script = ExtResource( 1 )

[node name="JoueurAnimation" type="AnimatedSprite" parent="."]
rotation = 1.57044
frames = SubResource( 1 )

[node name="JoueurCollision" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 12.1834, -12.2843, 41.651, 0.102654, -5.65475, 22.7973, -32.4119, 22.7973, -8.33046, 11.4998, -21.709, 10.3106, -33.6011, -0.0949173, -21.1144, -9.60857, -10.1143, -11.0951, -32.4119, -22.6898, -5.35744, -22.9872 )

[node name="JoueurCanon" type="Position2D" parent="."]
position = Vector2( 45.3769, 0 )

[node name="JoueurCamera" type="Camera2D" parent="."]
current = true

[node name="JoueurSonTir" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="JoueurSonMort" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
